# MCPAgents

./: .gitignore  DELAWARE_RAG_README.md  delaware_rag_server.py  license_sources.json  requirements.txt  setup_qdrant.py  streamlit_app.py  test_delaware_mcp.py  test_delaware_rag.py
BusinessLicenseNavigator/: .gitignore  ARCHITECTURE.md  Makefile  README.md  SECURITY_REPORT.md  STREAMLIT_TESTING_GUIDE.md  agent.py  main.py  pyproject.toml  requirements.txt  setup_qdrant.py  streamlit_app.py  test_integration.py
BusinessLicenseNavigator/config/: delaware_mcp.json  mcp_servers.json  rag_servers.json  states.json
BusinessLicenseNavigator/core/factories/: server_factory.py
BusinessLicenseNavigator/core/models/: base_rag_server.py  search_result.py  text_content.py  tool_result.py
BusinessLicenseNavigator/delaware_rag/: __init__.py  delaware_mcp_server.py  delaware_rag_server.py
BusinessLicenseNavigator/docs/: DELAWARE_MCP_README.md  DELAWARE_RAG_README.md
BusinessLicenseNavigator/florida_rag/: __init__.py  florida_mcp_server.py  florida_rag_server.py
BusinessLicenseNavigator/generic_rag/: __init__.py  generic_mcp_server.py
BusinessLicenseNavigator/markdowns/: ARCHITECTURE.md  CONFIG_REORGANIZATION_SUMMARY.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  MCP_INTEGRATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PYPROJECT_MIGRATION_SUMMARY.md  README.md  SRC_TESTS_REORGANIZATION_SUMMARY.md
BusinessLicenseNavigator/mcp/: __init__.py
BusinessLicenseNavigator/mcp/servers/: __init__.py
BusinessLicenseNavigator/mcp/servers/florida/: florida_mcp_server.py
BusinessLicenseNavigator/mcp/servers/generic/: __init__.py
BusinessLicenseNavigator/mcp_server/: __init__.py
BusinessLicenseNavigator/mcp_server/servers/delaware/: __init__.py
BusinessLicenseNavigator/rag/: __init__.py
BusinessLicenseNavigator/rag/servers/: __init__.py
BusinessLicenseNavigator/rag/servers/delaware/: __init__.py  delaware_rag_server.py
BusinessLicenseNavigator/rag/servers/florida/: __init__.py
BusinessLicenseNavigator/rag/servers/generic/: __init__.py  generic_rag_server.py
BusinessLicenseNavigator/src/: __init__.py  add_new_state.py  chat_interface.py  enhanced_agent.py
BusinessLicenseNavigator/src/config/: app_config.json  business_types.json  mcp_config.json  mcp_servers.json  rag_servers.json  states.json
BusinessLicenseNavigator/src/core/: ai_services.py  config_manager.py  intelligent_semantic_search.py  monitoring.py  prompt_builder.py
BusinessLicenseNavigator/src/core/factories/: server_factory.py
BusinessLicenseNavigator/src/core/models/: __init__.py  base_mcp_server.py
BusinessLicenseNavigator/src/servers/: __init__.py
BusinessLicenseNavigator/src/servers/delaware/: config.py  data_manager.py  delaware_mcp_server.py  delaware_rag_server.py  utils.py
BusinessLicenseNavigator/src/servers/florida/: __init__.py  florida_mcp_server.py  florida_rag_server.py
BusinessLicenseNavigator/src/servers/generic/: generic_mcp_server.py  generic_rag_server.py
BusinessLicenseNavigator/src/servers/template/: __init__.py  template_mcp_server.py  template_rag_server.py
BusinessLicenseNavigator/tests/: FINAL_PR_REVIEW_SUMMARY.md  GEMINI_API_KEY_TEST_SUMMARY.md  PR_REVIEW_REPORT.md  README.md  __init__.py  quick_check.py  run_system_tests.py  run_tests.py  test_config.py  test_delaware_mcp.py  test_delaware_rag.py  test_generic_system.py  test_ice_cream_franchise.py  test_ice_cream_franchise_real.py  test_integration.py  test_organized_structure.py  test_state_structure.py  test_system.py
BusinessLicenseNavigator/ui/: app.py
BusinessLicenseNavigator/utils/: __init__.py  business_handler.py  mcp_factory.py  state_handler.py
TestEndPoints/: README.md  callGeminiAPI.py  main.py  mcp_config.json  mcp_servers.py  pyproject.toml  requirements.txt  test_gemini_simple.py  test_mcp_gemini.py
basicAICall/: callOllama.py  main.py  pyproject.toml
langchainChat/: app.py  main.py  pyproject.toml  pyvenv.cfg
mcpdemo/: README.md  browser_mcp.json  chat_app.py  pyproject.toml
