[project]
name = "businesslicensenavigator"
version = "0.1.0"
description = "AI-powered business license guidance system with Delaware RAG integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.47.1",
    "requests>=2.31.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.24.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delaware_rag"]
