[project]
name = "testendpoints"
version = "0.1.0"
description = "Test endpoints for various APIs including Gemini with MCP servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    # MCP (Model Context Protocol) dependencies
    "mcp>=1.0.0",
    "mcp-use>=1.3.7",
    "mcp-server-fetch>=1.0.0",
    "mcp-server-playwright>=1.0.0",
    # Playwright for browser automation
    "playwright>=1.40.0",
    # Additional utilities
    "asyncio>=3.4.3",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
